@@ -1,4 +1,4 @@
-FROM openjdk:11
+FROM openjdk:14
 COPY target/dependency-jars /run/dependency-jars
 ADD target/application.jar /run/application.jar
-ENTRYPOINT java -jar run/application.jar
+ENTRYPOINT java -jar --enable-preview run/application.jar
